Add internship history on get student details route
