# src/apps/api/docs/swagger.yaml
@@ -208,6 +208,45 @@ definitions:
         type: string
       institution:
         type: string
+      internship_history:
+        items:
+          $ref: '#/definitions/response.Internship'
+        type: array
+      name:
+        type: string
+      pending_workload:
+        type: integer
+      phone:
+        type: string
+      profile_picture:
+        type: string
+      registration:
+        type: string
+      total_workload:
+        type: integer
+      updated_at:
+        type: string
+      workload_completed:
+        type: integer
+    type: object
+  response.StudentList:
+    properties:
+      birth_date:
+        type: string
+      course:
+        type: string
+      cpf:
+        type: string
+      created_at:
+        type: string
+      current_internship:
+        $ref: '#/definitions/response.Internship'
+      email:
+        type: string
+      id:
+        type: string
+      institution:
+        type: string
       name:
         type: string
       pending_workload:
@@ -1133,7 +1172,7 @@ paths:
           description: Requisição realizada com sucesso.
           schema:
             items:
-              $ref: '#/definitions/response.Student'
+              $ref: '#/definitions/response.StudentList'
             type: array
         "400":
           description: Requisição mal formulada.
@@ -1292,7 +1331,7 @@ paths:
       description: Remove um estudante do sistema.
       operationId: Student.Delete
       parameters:
-      - default: 5fa6d07d-4e5a-4d27-8f8b-3de0dbec5c65
+      - default: 02e62826-bf41-4944-adb2-051b6a30a131
         description: ID do estudante
         in: path
         name: id
@@ -1344,7 +1383,7 @@ paths:
       description: Recupera os dados de um estudante específico pelo seu ID.
       operationId: Student.Get
       parameters:
-      - default: 5fa6d07d-4e5a-4d27-8f8b-3de0dbec5c65
+      - default: 02e62826-bf41-4944-adb2-051b6a30a131
         description: ID do estudante
         in: path
         name: id
@@ -1402,7 +1441,7 @@ paths:
       description: Atualiza os dados de um estudante existente no sistema.
       operationId: Student.Update
       parameters:
-      - default: 5fa6d07d-4e5a-4d27-8f8b-3de0dbec5c65
+      - default: 02e62826-bf41-4944-adb2-051b6a30a131
         description: ID do estudante
         in: path
         name: id
